--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body {
     background-color: #000000;
 }
 
+.nonDraggableImage{
+    -webkit-user-drag: none;
+}
+
 .slider {
     width: 800px;
     height: 400px;
